[package]
name = "knitchart"
description = "A simple program to generate graphical knitting charts from ASCII charts."
version = "0.1.0"
authors = ["gmadrid"]
edition = "2018"

[lib]
name = "knitchart"

[dependencies]
css-color-parser = "0.1.2"
error-chain = "0.12.0"
graphics_buffer = "0.7.2"
piston2d-graphics = "0.35.0"
