[package]
name = "macros"
version = "0.0.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
css-color-parser = ""
proc-macro2 = "^1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }
quote = "1.0"
