[package]
name = "stringstruct"
version = "0.0.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/macro_tests.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
css-color-parser = ""
proc-macro2 = "^1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }
quote = "1.0"
